# rest-api

./: .env  .env.example  .gitignore  Cargo.toml  README.md  deploy.sh  test_sample_data.json
.github/workflows/: rust.yml
docs/: api.md
migrations/0_initial/: down.sql  up.sql
migrations/2021-03-10-134749_create_posts/: up.sql
migrations/2021-03-18-133300_create-favorites/: down.sql  up.sql
migrations/2021-03-18-134104_create_restaurants/: down.sql  up.sql
migrations/2021-03-25-081800_favorite-table-change/: down.sql  up.sql
migrations/2021-04-07-114600_SmileyReport_table/: down.sql  up.sql
sample_data/: sample.sql  truncate.sql
src/: database.rs  main.rs  models.rs  push_notification.rs  utils.rs
src/database/: append_smiley.rs  models.rs  restaurants_repository.rs  schema.rs
src/services/: admin.rs  example.rs  mod.rs  posts.rs  restaurant.rs  subscription.rs
src/tests/: mod.rs  response_parser.rs  tests.rs
src/tests/database/: models.rs
src/tests/utils/: data_inserter.rs  mod.rs
src/utils/: data_inserter.rs  data_loader.rs  json_parser.rs  mod.rs  push_notification.rs
