[package]
name = "smiley_rest_api"
version = "0.1.0"
authors = ["Seraph <31919330+Jakobzs@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"